# vb-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 1e14a4e8ec0c_standesdb_images_exclusive_arc.py  223350b69edd_money_columns_to_numeric.py  3f58e5fc7f5f_fk_ondelete_onupdate.py  42df0f369b0b_enum_conversions_8c.py  4831bb012783_schema_baseline.py  514ac66eb66e_p4x_partners_and_delegating_partner_.py  5292367fb696_personal_access_tokens_real_fk.py  6f7ce9023e0e_enum_conversions_8b.py  740805d424aa_timestamp_to_timestamptz.py  74d19e4af679_updated_at_trigger.py  825f28b2896d_type_and_naming_fixes_8a.py  8817d8f25690_initial_baseline.py  cb250c054945_check_constraints.py  eafb371929f8_add_public_gallery_images.py  ebc37d20860a_flexibledate_to_native_date.py
app/api/: auth_guards.py  deps.py  router.py  system.py
app/api/router_includes/: archive.py  auth.py  information.py  members.py  p4x.py  public_gallery_admin.py  public_site.py  standesdb.py  system.py  tracking.py
app/core/: activity_logger.py  config.py  logging_config.py  mailer.py  rate_limit.py  scheduler.py  security.py  storage.py  tasks.py
app/db/: base.py  database.py
app/models/: archive_dir.py  archive_file.py  archive_file_comment.py  archive_file_version.py  archive_permission.py  archive_store_item.py  badge.py  client_user_agent.py  contact.py  contacts_log.py  enums.py  key.py  member.py  member_badge.py  member_key.py  member_role.py  members_log.py  members_oauth2binding.py  org.py  p4x_account.py  p4x_category.py  p4x_category_direct.py  p4x_category_filter.py  p4x_category_filter_hit.py  p4x_fee.py  p4x_partner.py  p4x_specialcontact.py  p4x_summary_order.py  p4x_transaction.py  password_reset.py  personal_access_token.py  public_gallery_image.py  request_log.py  role.py  sent_email.py  standesdb_image.py  state.py  types.py
app/schemas/: archive.py  auth.py  base.py  member.py  p4x.py  public_gallery.py  standesdb.py  tracking.py
app/services/: anniversary_service.py  archive_service.py  auth_service.py  backup_service.py  export_service.py  image_service.py  information_service.py  p4x_response_builders.py  p4x_service.py  permission_service.py  public_gallery_service.py  s3_mirror_service.py  standesdb_service.py  storage_integrity_service.py  tracking_service.py
app/templates/: booklet.html  labels.html
app/templates/email/: archive_health_check.html  birthday.html  chronicles.html  debtor_reminder.html  entry_changed.html  password_reset.html  public_contact_form.html  standesdb_health_check.html
scripts/: README.md  backup_db.py  check_s3_integrity.py  downsync_from_prod_aws.py  downsync_prod.py  migrate_public_gallery.py  migrate_to_s3.py  restore_db.py  run_pytest.sh  sqlite2pg.py  trigger_chronicles.py
scripts/migration_archive/: migrate_public_gallery.py  migrate_to_s3.py  sqlite2pg.py
tests/: conftest.py  test_activity_logger.py  test_anniversary_service.py  test_backup_service.py  test_check_constraints_migration.py  test_exception_handlers.py  test_fk_enforcement.py  test_information.py  test_members.py  test_permission_setup.py  test_s3_mirror_service.py  test_scheduled_jobs.py  test_security_headers.py  test_storage_integrity_service.py  test_system.py  test_timestamptz_migration.py  test_tracking.py  test_updated_at_trigger.py
tests/archive/: test_archive.py  test_archive_coverage.py  test_archive_files.py  test_archive_permissions.py
tests/auth/: test_auth.py  test_google_auth.py  test_refresh.py  test_security_flows.py
tests/core/: test_config.py  test_mailer.py  test_scheduler_lock.py  test_storage.py
tests/p4x/: test_p4x_accounts.py  test_p4x_categories.py  test_p4x_category_directs.py  test_p4x_fee_balance.py  test_p4x_fees.py  test_p4x_filters.py  test_p4x_import.py  test_p4x_models.py  test_p4x_money_precision.py  test_p4x_parser.py  test_p4x_partners.py  test_p4x_response_builders.py  test_p4x_schemas.py  test_p4x_service_fee_members.py  test_p4x_service_filters_extended.py  test_p4x_service_queries.py  test_p4x_summary.py  test_p4x_sumup.py  test_p4x_transaction_edit.py
tests/public_site/: test_contact.py  test_gallery.py
tests/scripts/: _subprocess_helpers.py  test_backup_db.py  test_check_s3_integrity.py  test_downsync_prod.py  test_migrate_public_gallery.py  test_migrate_to_s3.py  test_restore_db.py  test_sqlite2pg.py  test_trigger_chronicles.py
tests/scripts/migration_archive/: test_migrate_public_gallery.py  test_migrate_to_s3.py  test_sqlite2pg.py
tests/standesdb/: test_api.py  test_endpoints.py  test_export.py  test_export_coverage.py  test_image_gallery.py  test_keys_list.py  test_models.py  test_notification_email.py  test_permissions.py  test_role_overlap.py  test_roles_list.py  test_schemas_standesdb.py  test_standesdb_coverage.py
